
dnl Process this file with autoconf to produce a configure script
AC_INIT(DESCRIPTION)

dnl Check chmod
chmod +x ./inst/workflow/spmd/2d_I/*.sh
chmod +x ./inst/workflow/spmd/2d_noX/*.sh
chmod +x ./inst/workflow/spmd/2d_V/*.sh
chmod +x ./inst/workflow/spmd/3d_I/*.sh
chmod +x ./inst/workflow/spmd/3d_V/*.sh
chmod +x ./inst/workflow/spmd/3d_noX/*.sh
chmod +x ./inst/workflow/simulation/simu_2d/*.sh
chmod +x ./inst/workflow/simulation/simu_2d/script/*.sh
chmod +x ./inst/workflow/timing/*.sh
chmod +x ./vignettes/*.sh
